--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -1,44 +1,27 @@
 * {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
+
 body {
-  font-family: Arial, sans-serif;
+  align-items: center;
   background-image: linear-gradient(45deg, #f3b8ff, #ffffff);
   display: flex;
+  font-family: Arial, sans-serif;
   justify-content: center;
-  align-items: center;
   margin: 0;
   padding: 20px;
 }
 
-.container {
-  max-width: 1000px;
-  margin: auto;
-  background-color: rgb(242, 194, 255);
-  padding: 30px;
-  border-radius: 10px;
-  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
-}
-
-h1,
-h2 {
-  color: #2c3e50;
-}
-
-section {
-  margin-bottom: 30px;
-}
-
 button {
-  padding: 10px 16px;
   background: rgb(114, 114, 153);
-  color: white;
   border: none;
   border-radius: 10px;
-  margin: 8px 4px 12px 0;
+  color: white;
   cursor: pointer;
+  margin: 8px 4px 12px 0;
+  padding: 10px 16px;
   transition: background-color 0.3s ease;
 }
 
@@ -46,35 +29,208 @@ button:hover {
   background: rgba(114, 114, 153, 0.788);
 }
 
+.container {
+  background-color: rgb(242, 194, 255);
+  border-radius: 10px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+  margin: auto;
+  max-width: 1000px;
+  padding: 30px;
+}
+
+.container h1 {
+  -webkit-background-clip: text;
+  background-clip: text;
+  background-image: linear-gradient(45deg, #f3b8ff 0%, #e77aff 90%);
+  color: transparent;
+}
+
+.container li {
+  margin-block: 5px;
+}
+
+.container li a {
+  color: rgb(114, 114, 153);
+  font-size: 18px;
+  text-decoration: none;
+}
+
+.container li a:hover {
+  color: rgba(114, 114, 153, 0.781);
+}
+
+.container ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.error {
+  color: red;
+}
+
+.form-container {
+  display: none;
+  height: 250px;
+  padding: 20px;
+}
+
+.form-container.active {
+  display: block;
+}
+
+.form-container form {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  padding: 10px 0;
+}
+
+h1,
+h2 {
+  color: #2c3e50;
+}
+
+input {
+  margin: 8px 0;
+  padding: 8px;
+  width: 100%;
+}
+
 input[type='text'],
 select {
-  padding: 10px;
-  margin: 6px 4px 12px 0;
-  width: calc(100% - 20px);
-  max-width: 400px;
   border: 1px solid #ccc;
   border-radius: 10px;
   box-sizing: border-box;
+  margin: 6px 4px 12px 0;
+  max-width: 400px;
+  padding: 10px;
+  width: calc(100% - 20px);
+}
+
+label {
+  display: block;
+  margin: 8px 0;
+}
+
+.list-hover:hover {
+  color: rgb(136, 136, 136);
+  cursor: pointer;
+}
+
+.list-ol {
+  display: flex;
+  gap: 10px;
+  margin-top: 5px;
+}
+
+.list-ol {
+  padding-left: 20px;
+}
+
+.login-btn {
+  margin-top: auto;
+}
+
+.message {
+  font-size: 0.9em;
+  margin-top: 10px;
+  text-align: center;
+}
+
+.question {
+  align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  font-size: 20px;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+
+.question h3 {
+  font-size: 30px;
+  margin-bottom: 10px;
+}
+
+.question label {
+  align-items: center;
+  display: flex;
+  gap: 8px;
+}
+
+.question label input[type='radio'] {
+  margin-right: 8px;
+}
+
+.question-block {
+  background-color: rgba(250, 250, 250, 0.603);
+  border: 1px solid rgba(0, 0, 0, 0.527);
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  margin-bottom: 20px;
+  padding: 30px;
+}
+
+.quiz-h2 {
+  margin-bottom: 0px;
+}
+
+section {
+  margin-bottom: 30px;
 }
 
 select {
-  width: 100%;
   max-width: 400px;
+  width: 100%;
+}
+
+.show-section {
+  align-items: center;
+  background-color: #e77aff;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-width: 100%;
+  padding: 10px;
+}
+
+.success {
+  color: green;
+}
+
+.tab {
+  flex: 1;
+  padding: 10px;
+  text-align: center;
+  transition: background 0.3s;
+}
+
+.tab.active {
+  background: rgb(223, 223, 223);
+  font-weight: bold;
+}
+
+.tabs {
+  background: rgb(247, 246, 246);
+  cursor: pointer;
+  display: flex;
 }
 
 table {
-  width: 100%;
+  border: 1px solid #ccc;
   border-collapse: collapse;
   margin-block: 10px;
-  border: 1px solid #ccc;
+  width: 100%;
 }
 
-th,
-td {
-  padding: 10px;
-  text-align: left;
+td,
+th {
   border: 1px solid rgb(170, 170, 170);
   font-size: 14px;
+  padding: 10px;
+  text-align: left;
 }
 
 th {
@@ -84,8 +240,4 @@ th {
 
 tr:hover {
   background-color: #f1f1f18f;
-}
-
-.list-ol {
-  padding-left: 20px;
 }
